# internal/delivery/user_handler.go
@@ -19,4 +19,5 @@ func SetUpUserRoutes(router *gin.RouterGroup) {
 	userRoute := router.Group("/users")
 	userRoute.POST("/register", UserHandler.Register)
 	userRoute.POST("/login", UserHandler.Login)
+	userRoute.POST("/verify-access-token", UserHandler.VerifyAccessToken)
 }
